After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 784842 - comics: More bug fixes
comics: More bug fixes
Status: RESOLVED FIXED
Product: evince
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Evince Maintainers
Evince Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-07-12 11:33 UTC by Bastien Nocera
Modified: 2017-07-12 13:52 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
unarr: Remove a number of unused files (37.35 KB, patch)
2017-07-12 11:33 UTC, Bastien Nocera
committed Details | Review
comics: Fix decoding some files in RAR archives (1.64 KB, patch)
2017-07-12 11:33 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2017-07-12 11:33:08 UTC
.
Comment 1 Bastien Nocera 2017-07-12 11:33:13 UTC
Created attachment 355398 [details] [review]
unarr: Remove a number of unused files

They were compiled but unused.
Comment 2 Bastien Nocera 2017-07-12 11:33:19 UTC
Created attachment 355399 [details] [review]
comics: Fix decoding some files in RAR archives

The unarr RAR decoder doesn't like it when we request more data than is
available:
! rar.c:169: Requesting too much data (3563 < 10240)

Clamp the size of the read request to the data left to read.
Comment 3 Bastien Nocera 2017-07-12 13:52:04 UTC
Attachment 355398 [details] pushed as 92e98f6 - unarr: Remove a number of unused files
Attachment 355399 [details] pushed as 499cd20 - comics: Fix decoding some files in RAR archives