comics: Fix decoding some files in RAR archives

The unarr RAR decoder doesn't like it when we request more data than is
available:
! rar.c:169: Requesting too much data (3563 < 10240)

Clamp the size of the read request to the data left to read.

https://bugzilla.gnome.org/show_bug.cgi?id=784842